--- a/packages/system.yaml
+++ b/packages/system.yaml
@@ -3,14 +3,14 @@
 ########
 
 system_sensors:
-  sensor:
-    - platform: command_line
-      name: CPU Temperature
-      command: "cat /sys/class/thermal/thermal_zone0/temp"
-      # If errors occur, make sure configuration file is encoded as UTF-8
-      unit_of_measurement: "°C"
-      scan_interval: 60
-      value_template: "{{ value | multiply(0.001) | round(1) }}"
+  command_line:  
+    - sensor:
+        name: CPU Temperature
+        command: "cat /sys/class/thermal/thermal_zone0/temp"
+        # If errors occur, make sure configuration file is encoded as UTF-8
+        unit_of_measurement: "°C"
+        scan_interval: 60
+        value_template: "{{ value | multiply(0.001) | round(1) }}"
   automation:
     - id: '1623179067278'
       alias: "Update Available Notification"
