--- a/packages/rss_feeds.yaml
+++ b/packages/rss_feeds.yaml
@@ -14,6 +14,7 @@ rss_feeds:
   automation:
     - id: '1623179067263'
       alias: "RSS feed updates"
+      mode: queued
       trigger:
         platform: event
         event_type: feedreader
