--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -17,4 +17,6 @@ jobs:
             extends: default
             rules:
               truthy: disable
+            ignore: |
+              /automations.yaml
 ...
